<resources>
    <string name="app_name">BookWorm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Hi! Welcome back.</string>
    <string name="email">Email</string>
    <string name="at_sign">\@</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t you have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="user_name">UserName</string>
    <string name="continue_btn">Continue</string>
    <string name="dob">Date of birth</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="almost_done">We are almost done!</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="finish">Finish</string>
    <string name="i_agree_with">I agree with</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="navigate_to_new_review">Navigate to create review</string>
    <string name="invalid_data">Please introduce valid data</string>
    <string name="default_username">\@UserName</string>
    <string name="default_score">5.5</string>
    <string name="default_amount">0</string>
    <string name="dufaut_text">string/title</string>
    <string name="loading">Loading...</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
    <string name="avatar_description">User profile picture</string>
    <string name="redirection">Redirecting to Amazon :)</string>
    <string name="reviews">Reviews</string>
    <string name="followers">Followers</string>
    <string name="Following">Following</string>
    <string name="image_description">Review Picture</string>
    <string name="saved_post">Saved Post</string>
    <string name="search">Search</string>
    <string name="give_away">Giveaway, jus create a post</string>
    <string name="most_readed_books">Most readed books</string>
    <string name="book_image">Book Image</string>
    <string name="empty_val">"si"</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_psw">Update Password</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="current_psw">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="save_password">Save password</string>
    <string name="new_review">New Review</string>
    <string name="gallery">Gallery</string>
    <string name="score">Score</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="review">Review</string>
    <string name="hashtags">Hashtags</string>
    <string name="publish">Publish</string>
    <string name="profile_description">Profile description</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="not_found">It seemes like there\'s nothing here yet. 🧐</string>
    <string name="zero_reviews">This user haven\'t reviewed any book 🧐</string>
</resources>