<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.settings.SettingsFragment" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_settings"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:cardBackgroundColor="@color/inverseOnSurface"
        app:cardElevation="6dp"
        app:cardMaxElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:paddingStart="22dp">

            <ImageButton
                android:id="@+id/ib_settings_back"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/todo"
                android:paddingTop="2dp"
                android:paddingEnd="12dp"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/card"
                app:layout_constraintEnd_toEndOf="@+id/card"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tv_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="2dp"
                android:text="@string/settings"
                android:textAppearance="@style/title_large"
                android:textColor="@color/secondary" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_settings">

        <LinearLayout
            android:id="@+id/ly_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_profile"
                android:textAppearance="@style/body_large"
                android:textColor="@color/onPrimaryContainer" />

            <ImageView
                android:id="@+id/iv_next_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_setttings_24" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/ly_update_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_update_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update_psw"
                android:textAppearance="@style/body_large"
                android:textColor="@color/onPrimaryContainer" />

            <ImageView
                android:id="@+id/iv_arrow_next_update_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_setttings_24" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/ly_log_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_out"
                android:textAppearance="@style/body_large"
                android:textColor="@color/onPrimaryContainer" />

            <ImageView
                android:id="@+id/iv_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_logout_24" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_delte_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/divider_delete_account"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_delete_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_account"
                android:textAppearance="@style/body_large"
                android:textColor="@color/error" />

            <ImageView
                android:id="@+id/iv_delete_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_delete_forever_24" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>